memória imagem palavra

--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -36,9 +36,15 @@
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             cursor: pointer;
+            text-align: center;
+            font-size: 1.2rem;
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
-        .card img {
+        .card img, .card .text {
             position: absolute;
             top: 0;
             left: 0;
@@ -51,7 +57,7 @@
             transition: transform 0.3s;
         }
 
-        .card.show img {
+        .card.show img, .card.show .text {
             transform: rotateY(0deg);
         }
 
@@ -114,8 +120,8 @@
                     const lines = data.trim().split('\n');
                     lines.forEach(line => {
                         const [image, word] = line.split(',');
-                        cardPairs.push({ image: image.trim(), word: word.trim() });
-                        cardPairs.push({ image: image.trim(), word: word.trim() }); // Duplicando para fazer pares
+                        cardPairs.push({ type: 'image', content: image.trim() });
+                        cardPairs.push({ type: 'text', content: word.trim() });
                     });
                     shuffleAndCreateBoard();
                 });
@@ -127,7 +133,13 @@
             shuffledPairs.forEach(pair => {
                 const card = document.createElement('div');
                 card.classList.add('card');
-                card.innerHTML = `<img src="imagens/${pair.image}" alt="${pair.word}">`;
+
+                if (pair.type === 'image') {
+                    card.innerHTML = `<img src="imagens/${pair.content}" alt="Memory Image">`;
+                } else {
+                    card.innerHTML = `<div class="text">${pair.content}</div>`;
+                }
+
                 card.addEventListener('click', flipCard);
                 gameBoard.appendChild(card);
             });
@@ -160,7 +172,13 @@
 
         // Função para verificar se as cartas combinam
         function checkForMatch() {
-            const isMatch = firstCard.innerHTML === secondCard.innerHTML;
+            let isMatch = false;
+            if (firstCard.querySelector('img') && secondCard.querySelector('.text')) {
+                isMatch = firstCard.querySelector('img').alt === secondCard.querySelector('.text').textContent;
+            } else if (firstCard.querySelector('.text') && secondCard.querySelector('img')) {
+                isMatch = firstCard.querySelector('.text').textContent === secondCard.querySelector('img').alt;
+            }
+
             isMatch ? disableCards() : unflipCards();
         }
 
