--- a/nivelA/unidade1/WordSearch/index.html
+++ b/nivelA/unidade1/WordSearch/index.html
@@ -16,12 +16,14 @@
             align-items: center;
             height: 100vh;
             flex-direction: column;
+            box-sizing: border-box;
         }
         h1 {
             font-size: 2.5em;
             margin: 20px 0;
             color: #4a90e2;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
         #word-search-container {
             display: flex;
@@ -31,15 +33,20 @@
             padding: 20px;
             border-radius: 15px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            flex-wrap: wrap;
         }
         #word-search-canvas {
+            width: 100%;
+            max-width: 100%;
+            height: auto;
             border: 2px solid #4a90e2;
             border-radius: 10px;
-            margin-right: 20px;
+            margin-bottom: 20px;
         }
         #words-list {
             text-align: left;
             max-width: 200px;
+            margin-top: 20px;
         }
         #words-list ul {
             list-style-type: none;
@@ -69,48 +76,43 @@
         #reset-button:hover {
             background-color: #357ABD;
         }
+
+        .image-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
+            gap: 10px;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+
+        .image-container img {
+            max-width: 100px;
+            margin: auto;
+        }
+
+        #back-button {
+            margin: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border: none;
+            border-radius: 5px;
+            background-color: #4a90e2;
+            color: white;
+            transition: background-color 0.3s ease;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+        }
+        #back-button:hover {
+            background-color: #357ab7;
+        }
     </style>
-
-<style>
-.image-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 15px;
-    justify-content: center;
-    margin-bottom: 20px;
-}
-
-.image-container img {
-    max-width: 100px;
-    margin: auto;
-}
-</style>
 </head>
 <body>
 <button onclick="window.location.href='../index.html'" id="back-button">
     Back
 </button>
-<style>
-    #back-button {
-        margin: 20px;
-        padding: 10px 20px;
-        font-size: 16px;
-        cursor: pointer;
-        border: none;
-        border-radius: 5px;
-        background-color: #4a90e2;
-        color: white;
-        transition: background-color 0.3s ease;
-        position: absolute;
-        top: 10px;
-        left: 10px;
-    }
-    #back-button:hover {
-        background-color: #357ab7;
-    }
-</style>
-
-
 
     <h1>Hannah Word Search Game</h1>
     <button id="reset-button">Restart Game</button>
