--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Game</title>
+    <title>Hannah Memory Game</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -30,35 +30,63 @@
 
         .card {
             position: relative;
+            width: 100%;
             padding-top: 100%; /* Mantém a proporção 1:1 */
-            background-color: #3498db;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            perspective: 1000px; /* Cria o efeito 3D para virar a carta */
+        }
+
+        .card-inner {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            transition: transform 0.6s;
+            transform-style: preserve-3d;
             cursor: pointer;
-            text-align: center;
-            font-size: 1.2rem;
-            color: white;
+        }
+
+        .card.show .card-inner {
+            transform: rotateY(180deg);
+        }
+
+        .card-front, .card-back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            border-radius: 10px;
             display: flex;
             align-items: center;
             justify-content: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
-        .card img, .card .text {
-            position: absolute;
-            top: 0;
-            left: 0;
+        .card-back {
+            background-color: #3498db;
+        }
+
+        .card-back img {
+            width: 80%;
+            height: 80%;
+            object-fit: contain;
+        }
+
+        .card-front {
+            background-color: #fff;
+            transform: rotateY(180deg);
+        }
+
+        .card-front img {
             width: 100%;
             height: 100%;
             object-fit: cover;
             border-radius: 10px;
-            transform: rotateY(180deg);
-            backface-visibility: hidden;
-            transition: transform 0.3s;
         }
 
-        .card.show img, .card.show .text {
-            transform: rotateY(0deg);
+        .card-front .text {
+            font-size: 1.2rem;
+            color: #333;
+            text-align: center;
+            padding: 10px;
         }
 
         button {
@@ -91,9 +119,9 @@
     </style>
 </head>
 <body>
-    <button onclick="window.location.href='../index.html'">Back</button>
+    <button onclick="window.history.back()">Back</button>
 
-    <h1>Memory Game</h1>
+    <h1>Hannah Memory Game</h1>
     
     <div class="controls">
         <p>Moves: <span id="move-counter">0</span></p>
@@ -133,13 +161,15 @@
             shuffledPairs.forEach(pair => {
                 const card = document.createElement('div');
                 card.classList.add('card');
-
-                if (pair.type === 'image') {
-                    card.innerHTML = `<img src="imagens/${pair.content}" alt="Memory Image">`;
-                } else {
-                    card.innerHTML = `<div class="text">${pair.content}</div>`;
-                }
-
+                card.innerHTML = `
+                    <div class="card-inner">
+                        <div class="card-front">
+                            ${pair.type === 'image' ? `<img src="imagens/${pair.content}" alt="${pair.content}">` : `<div class="text">${pair.content}</div>`}
+                        </div>
+                        <div class="card-back">
+                            <img src="logo.png" alt="Logo">
+                        </div>
+                    </div>`;
                 card.addEventListener('click', flipCard);
                 gameBoard.appendChild(card);
             });
