--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -11,7 +11,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
             background-color: #f4f4f4;
         }
@@ -87,6 +87,10 @@
             color: #333;
             text-align: center;
             padding: 10px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            word-wrap: break-word;
         }
 
         button {
@@ -214,6 +218,8 @@
 
         // Função para desativar as cartas que combinam
         function disableCards() {
+            firstCard.querySelector('.card-inner').style.transform = 'rotateY(180deg)';
+            secondCard.querySelector('.card-inner').style.transform = 'rotateY(180deg)';
             firstCard.removeEventListener('click', flipCard);
             secondCard.removeEventListener('click', flipCard);
             resetBoard();
