--- a/nivelA/unidade1/WordSearch/index.html
+++ b/nivelA/unidade1/WordSearch/index.html
@@ -12,10 +12,9 @@
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
             height: 100vh;
-            flex-direction: column;
             box-sizing: border-box;
         }
         h1 {
@@ -33,7 +32,9 @@
             padding: 20px;
             border-radius: 15px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            flex-wrap: wrap;
+            max-width: 100%;
+            overflow-x: auto;
+            box-sizing: border-box;
         }
         #word-search-canvas {
             width: 100%;
