--- a/nivelA/unidade1/WordSearch/index.html
+++ b/nivelA/unidade1/WordSearch/index.html
@@ -26,14 +26,13 @@
         }
         #word-search-container {
             display: flex;
-            justify-content: center;
-            align-items: flex-start;
+            flex-direction: column;
+            align-items: center;
             background-color: #fff;
             padding: 20px;
             border-radius: 15px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             max-width: 100%;
-            overflow-x: auto;
             box-sizing: border-box;
         }
         #word-search-canvas {
@@ -46,12 +45,13 @@
         }
         #words-list {
             text-align: left;
-            max-width: 200px;
+            max-width: 100%;
             margin-top: 20px;
         }
         #words-list ul {
             list-style-type: none;
             padding: 0;
+            text-align: center;
         }
         #words-list li {
             margin: 5px 0;
@@ -59,6 +59,7 @@
             padding: 5px;
             border-radius: 5px;
             transition: background-color 0.3s ease;
+            display: inline-block;
         }
         #words-list li:hover {
             background-color: #e1ecf4;
@@ -92,7 +93,7 @@
         }
 
         #back-button {
-            margin: 20px;
+            margin: 10px;
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
@@ -101,9 +102,10 @@
             background-color: #4a90e2;
             color: white;
             transition: background-color 0.3s ease;
-            position: absolute;
+            position: fixed;
             top: 10px;
             left: 10px;
+            z-index: 1000;
         }
         #back-button:hover {
             background-color: #357ab7;
