--- a/nivelA/unidade1/WordSearch/index.html
+++ b/nivelA/unidade1/WordSearch/index.html
@@ -37,7 +37,7 @@
         }
         #word-search-canvas {
             width: 100%;
-            max-width: 100%;
+            max-width: 600px; /* Limitar o tamanho máximo do canvas */
             height: auto;
             border: 2px solid #4a90e2;
             border-radius: 10px;
