--- a/nivelA/unidade1/MemoryGame/index.html
+++ b/nivelA/unidade1/MemoryGame/index.html
@@ -34,7 +34,7 @@
 
         .card {
             width: 100%;
-            padding-top: 100%; /* Maintain aspect ratio 1:1 */
+            padding-top: 100%; /* Mantém a proporção 1:1 */
             position: relative;
             perspective: 1000px;
         }
@@ -68,10 +68,34 @@
             background-color: #4CAF50;
         }
 
+        .card-back img {
+            max-width: 80%;
+            max-height: 80%;
+            object-fit: contain;
+        }
+
         .card-front {
             transform: rotateY(180deg);
             background-color: #ffffff;
             border: 2px solid #4CAF50;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+
+        .card-front img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+        }
+
+        .card-front p {
+            font-size: 1.2em;
+            text-align: center;
+            margin: 0;
+            word-wrap: break-word;
         }
 
         .controls {
